Adjust html/body max width to crop whitespace issue

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,3 +26,12 @@
 body {
     font-family: 'Proxima Nova', Georgia, sans-serif;
 }
+
+html,
+body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+}
